# quantum-surface-code-visualizer

./: .coveragerc  .gitignore  CONTRIBUTING.md  LICENSE  MATHEMATICAL_FOUNDATIONS.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: validation.yml
data/examples/: planar_d3.json  s2_minimal.json  t2_minimal.json  toric_d3.json  triangle.json
data/schema/: chain_complex.schema.json
docs/: TEST_ROADMAP.md  data_schema.md  index.md  math_background.md  qec_background.md  validation.md
examples/: 01_chain_complex_basics.py  02_surface_code_toric.py  03_threshold_scaling.py  04_custom_layouts.py  README.md
src/ccscv/: __init__.py  chain_complex.py  data_loader.py  homology.py  surface_code.py
src/ccscv/decoders/: __init__.py  base.py  mwpm.py  union_find.py
src/ccscv/visualize/: __init__.py  homology_viz.py  lattice.py
tests/: README.md  test_chain_complex.py  test_decoders.py  test_homology.py  test_roadmap_cases.py  test_surface_code.py  test_validation.py
