[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaincomplex-surface-code-visualizer"
version = "1.0.0"
description = "Prototype new surface-code layouts via algebraic topology and quantum error correction with rigorous math/physics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "ChainComplex Surface Code Visualizer Contributors"}
]
keywords = ["quantum-error-correction", "surface-codes", "chain-complexes", "algebraic-topology", "homology"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "sympy>=1.9.0",
    "networkx>=2.6.0",
    "numba>=0.56.0",
    "pydantic>=1.9.0",
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
    "tqdm>=4.62.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "hypothesis>=6.0.0",
    "jupyter>=1.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/faiazparis/chaincomplex-surface-code-visualizer"
Repository = "https://github.com/faiazparis/chaincomplex-surface-code-visualizer"
Documentation = "https://chaincomplex-surface-code-visualizer.readthedocs.io"
Issues = "https://github.com/faiazparis/chaincomplex-surface-code-visualizer/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ccscv" = ["data/schema/*.json", "data/examples/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
